--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ body {
     box-shadow: #00000012 0 0 5px 6px;
     margin-bottom: 5%;
     color: white;
+    text-align: center;
 }
 
 .leyenda {
